--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">  
-    <title>Custom Select Menu | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Iconscout Link For Icons -->
+    <title>Electro Homeoe</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Iconscout link For Icons -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  </head>
-  <body>
+</head>
+<body>
     <div class="wrapper">
-      <div class="select-btn">
-        <span>Select Country</span>
-        <i class="uil uil-angle-down"></i>
-      </div>
-      <div class="content">
-        <div class="search">
-          <i class="uil uil-search"></i>
-          <input spellcheck="false" type="text" placeholder="Search">
+        <div class="select-btn">
+            <span>Select Medicine</span>
+            <i class="uil uil-angle-down"></i>
         </div>
-        <ul class="options"></ul>
-      </div>
+        <div class="content">
+            <div class="search">
+                <i class="uil uil-search"></i>
+                <input type="text" placeholder="search">
+            </div>
+            <ul class="options"></ul>
+        </div>
     </div>
-
     <script src="script.js"></script>
-        
-  </body>
+</body>
 </html>
